src/Tests/Error/TypeArrayError.php
<?php

namespace ColdBolt\Tests\Error;

use ColdBolt\Tests\Error\AssertError;

class TypeArrayError extends AssertError
{
}
